--- a/calc.ipynb
+++ b/calc.ipynb
@@ -143,6 +143,7 @@
     "            \"\"\"\n",
     "            bin_weight = 0\n",
     "            bin_value = 0\n",
+    "            bin_itemids = list()\n",
     "\n",
     "            for i in data['all_items']:\n",
     "                if x[i, b].solution_value() > 0:\n",
@@ -156,6 +157,7 @@
     "\n",
     "                    bin_weight += data['weights'][i]\n",
     "                    bin_value += data['values'][i]\n",
+    "                    bin_itemids.append(i+1)\n",
     "\n",
     "            \"\"\" デバッグ用\n",
     "            print(f\"  目的重量範囲は: { bin_minimumreq[b] } ~ {data['bin_capacities'][b]}\")\n",
@@ -166,7 +168,7 @@
     "            txt += f'  パック内の個数は: {bin_value}\\n'\n",
     "            \"\"\"\n",
     "\n",
-    "            resitem = {\"asclass\" : data[\"classes\"][b], \"new\" : bin_weight}\n",
+    "            resitem = {\"asclass\" : data[\"classes\"][b], \"new\" : bin_weight, \"items\":bin_itemids}\n",
     "            res.append(resitem)\n",
     "            total_weight += bin_weight\n",
     "\n",
@@ -283,7 +285,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "bins_df_original = pd.read_csv('class.csv')\n",
+    "bins_df_original = pd.read_csv('class_large.csv')\n",
     "items_df = pd.read_csv('teg.csv')\n",
     "weights = items_df['list'].to_list()\n",
     "values = [ 1 for x in weights]\n",
@@ -343,26 +345,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9483b23d",
+   "id": "427e2587",
    "metadata": {},
    "outputs": [],
    "source": [
-    "res_bins = bins_df_original.set_index('class2')\n",
+    "res_bins = items_df.set_index('id')\n",
     "res_bins.loc[:,'new'] = 0\n",
-    "res_bins['id'] = range(1,len(res_bins.index) + 1)\n",
-    "\n",
-    "\n",
-    "for i in res:\n",
-    "    res_bins.loc[i['asclass'],'new'] = i['new']\n",
-    "\n",
-    "\n",
-    "res_bins = res_bins.drop(columns=['max','min','flag'])\n",
-    "res_bins = res_bins.reset_index()\n",
-    "# res_bins = res_bins.astype({'new' : 'int64', 'id' : 'int64'})\n",
-    "res_bins = res_bins.reindex(columns=['id','class2','base','new'])\n",
-    "res_bins = res_bins.rename(columns={'base' : 'list'})\n",
-    "res_bins.to_csv('out.csv')\n",
-    "# print(res_bins) #デバッグ用"
+    "res_bins.loc[:,'asclass'] = \"\"\n",
+    "for bin in res:\n",
+    "    for i in bin['items']:\n",
+    "        res_bins.loc[i,'asclass'] = bin['asclass']\n",
+    "        res_bins.loc[i,'new'] = bin['new']\n",
+    "res_bins = res_bins.reindex(columns=['list','asclass','new'])\n",
+    "res_bins.to_csv('out.csv')"
    ]
   }
  ],
